--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
     "react-dom": "17.0.2",
+    "react-modal": "3.14.3",
     "react-scripts": "4.0.0"
   },
   "devDependencies": {
